cleared code (added imgs/ directory)

--- a/frontend/cover.css
+++ b/frontend/cover.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-image: url("./map_pin.jpg");
+  background-image: url("./imgs/map_pin.jpg");
   background-size: cover;
 }
 body {
