--- a/frontend/public/relayers.css
+++ b/frontend/public/relayers.css
@@ -1,4 +1,38 @@
 /*
+ * Globals
+ */
+
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: #fff;
+}
+
+/* Custom default button */
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritance from `body` */
+  background-color: #fff;
+  border: 1px solid #fff;
+}
+
+
+/*
+ * Base structure
+ */
+
+/*
+body {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+}
+*/
+
+/*
  * Header
  */
 .masthead-brand {
@@ -51,10 +85,14 @@
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+
 }
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
+  color: #fff;
+  text-align: center;
+
 }
 .cover-container {
   margin-right: auto;
@@ -64,4 +102,36 @@
 /* Padding for spacing */
 .inner {
   padding: 30px;
+}
+
+/*
+ * Footer
+ */
+
+.mastfoot {
+  color: #333; /* IE8 proofing */
+  text-align: center;
+}
+
+.section1 {
+  background: transparent url("../imgs/map_pin.jpg") no-repeat top center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100%;
+  height: 900px;
+}
+
+.section2 {
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 70px;
+  color: #3D4957;
+  display: table-cell;
+  vertical-align: top;
+  text-align: center;
 }
