--- a/frontend/public/relayers.css
+++ b/frontend/public/relayers.css
@@ -74,6 +74,7 @@ body {
   }
   .masthead-nav {
     float: right;
+    padding: 40px;
   }
 }
 
@@ -108,9 +109,19 @@ body {
  * Footer
  */
 
+ .footer {
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   /* Set the fixed height of the footer here */
+   height: 60px;
+   background-color: #f5f5f5;
+ }
+
 .mastfoot {
   color: #333; /* IE8 proofing */
   text-align: center;
+  vertical-align: top;
 }
 
 .section1 {
@@ -119,8 +130,13 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: 100%;
-  height: 900px;
+  height: 100%;
 }
+
+.call-to-action{
+  margin-top: 250px;
+}
+
 
 .section2 {
   display: table;
@@ -134,4 +150,12 @@ body {
   display: table-cell;
   vertical-align: top;
   text-align: center;
+  background-color: #F9FAFC;
+}
+
+.section3 {
+  padding-top:50px;
+  height:700px;
+  color: #fff;
+  background-color: #444;
 }
