--- a/frontend/public/style_index.css
+++ b/frontend/public/style_index.css
@@ -74,7 +74,6 @@ body {
   }
   .masthead-nav {
     float: right;
-    padding: 40px;
   }
 }
 
@@ -110,11 +109,11 @@ body {
  */
 
  .footer {
-   position: absolute;
+   position: relative;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
-   height: 60px;
+   height: 30px;
    background-color: #f5f5f5;
  }
 
@@ -126,15 +125,7 @@ body {
 
 .section1 {
   background: transparent url("../imgs/map_pin.jpg") no-repeat top center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: 100%;
-  height: 100%;
-}
-
-.call-to-action{
-  margin-top: 250px;
 }
 
 
