--- a/frontend/public/style_index.css
+++ b/frontend/public/style_index.css
@@ -1,81 +1,5 @@
-/*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
 
 
-/*
- * Base structure
- */
-
-/*
-body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-}
-*/
-
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
-}
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
@@ -94,15 +18,7 @@ body {
   text-align: center;
 
 }
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
-}
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
-}
 
 /*
  * Footer
@@ -117,15 +33,17 @@ body {
    background-color: #f5f5f5;
  }
 
-.mastfoot {
-  color: #333; /* IE8 proofing */
-  text-align: center;
-  vertical-align: top;
-}
+ @media screen and (max-width: 480px) {
+      footer {
+        font-size: 80%;
+      }
+    }
+
 
 .section1 {
-  background: transparent url("../imgs/map_pin.jpg") no-repeat top center fixed;
+  background: url("../imgs/map_pin.jpg") top center fixed;
   background-size: 100%;
+  background-size: cover;
 }
 
 
