--- a/frontend/public/style_index.css
+++ b/frontend/public/style_index.css
@@ -23,7 +23,6 @@
 /*
  * Footer
  */
-
  .footer {
    position: relative;
    bottom: 0;
@@ -33,20 +32,20 @@
    background-color: #f5f5f5;
  }
 
+ @media screen and (min-width: 480px) {
+   footer{
+     font-size: 100%;
+   }
+}
  @media screen and (max-width: 480px) {
       footer {
-        font-size: 80%;
+        font-size: 75%;
       }
-      .section1{
-        background: url("../imgs/map_pin.jpg");
-        background-size: 50%;
-      }
-    }
+}
 
 
 .section1 {
-  background: url("../imgs/map_pin.jpg") top center fixed;
-  background-size: 100%;
+  background: url("../imgs/map_pin.jpg") fixed;
   background-size: cover;
 }
 
