--- a/frontend/public/style_index.css
+++ b/frontend/public/style_index.css
@@ -1,64 +1,46 @@
-.section1{
-  display: table;
+.body{
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
   margin-right: auto;
   margin-left: auto;
-  padding: 70px;
+}
+
+#section1{
+  background-size: cover;
   color: #fff;
-  vertical-align: top;
   text-align: center;
 }
 
-
-.section2 {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  margin-right: auto;
-  margin-left: auto;
+#section2{
   padding: 70px;
   color: #3D4957;
-  display: table-cell;
   vertical-align: top;
   text-align: center;
   background-color: #F9FAFC;
 }
 
-.section3 {
+#section3{
   padding-top:50px;
   height:700px;
   color: #fff;
   background-color: #444;
 }
 
-.footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 30px;
-  background-color: #f5f5f5;
-}
-
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px){
   footer{
     font-size: 100%;
   }
-  .section1 {
+  #section1{
     background-image: url("../imgs/map_pin.jpg");
-    background-size: cover;
   }
 
 }
-@media screen and (max-width: 480px) {
-  footer {
+@media screen and (max-width: 480px){
+  footer{
     font-size: 75%;
   }
-  .section1 {
+  #section1{
     background-image: url("../imgs/map_pin_mobile.jpg");
-    background-size: cover;
   }
 }
