--- a/frontend/public/style_inscription.css
+++ b/frontend/public/style_inscription.css
@@ -6,3 +6,9 @@
    height: 30px;
    background-color: #f5f5f5;
  }
+
+body{
+  background-image: url("../imgs/background_inscription.png");
+  background-size: cover;
+  overflow:hidden;
+}
