--- a/frontend/public/style_index.css
+++ b/frontend/public/style_index.css
@@ -66,3 +66,9 @@
 .dropdown{text-align:center;}
 .button, .dropdown-menu{margin:10px auto}
 .dropdown-menu{width:200px; left:50%; margin-left:-100px;}
+
+.disabled{
+  pointer-events: none;
+  cursor: default;
+  color:white;
+}
