--- a/frontend/public/style_index.css
+++ b/frontend/public/style_index.css
@@ -1,4 +1,4 @@
-.body{
+.body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
@@ -6,14 +6,14 @@
   margin-left: auto;
 }
 
-#section1{
+#section1 {
   background-size: cover;
   height:850px;
   color: #fff;
   text-align: center;
 }
 
-#section2{
+#section2 {
   padding: 70px;
   color: #3D4957;
   vertical-align: top;
@@ -21,22 +21,23 @@
   background-color: #F9FAFC;
 }
 
-#section3{
+#section3 {
   padding-top:50px;
   height:600px;
   color: #fff;
   background-color: #444;
 }
 
-@media screen and (min-width: 480px){
-  footer{
+@media screen and (min-width: 480px) {
+  footer {
     font-size: 100%;
   }
-  #section1{
+  #section1 {
     background-image: url("../imgs/map_pin.jpg");
     padding: 100px;
   }
-  #section1 .btn-default{
+
+  #section1 .btn-default {
     font-size: 30px;
     margin-top: 20px;
     color: white;
@@ -45,29 +46,36 @@
   }
 }
 
-@media screen and (max-width: 480px){
-  footer{
+@media screen and (max-width: 480px) {
+  footer {
     font-size: 75%;
   }
-  #section1{
+
+  #section1 {
     background-image: url("../imgs/map_pin_mobile.jpg");
     margin-top: 30px;
     padding: 10%;
   }
 }
 
-
-
 #section1 .btn-default:hover {
     background-color: #B2605B;
     color: white;
 }
 
-.dropdown{text-align:center;}
-.button, .dropdown-menu{margin:10px auto}
-.dropdown-menu{width:200px; left:50%; margin-left:-100px;}
+.dropdown {
+  text-align:center;
+}
 
-.disabled{
+.button, .dropdown-menu {
+  margin:10px auto
+}
+
+.dropdown-menu {
+  width:200px; left:50%; margin-left:-100px;
+}
+
+.disabled {
   pointer-events: none;
   cursor: default;
   color:white;
