--- a/frontend/public/navbar.css
+++ b/frontend/public/navbar.css
@@ -1,4 +1,23 @@
-/*Formulaire de login*/
+/* Register form */
+
+#register-dp{
+    min-width: 250px;
+    padding: 14px 14px 0;
+    overflow:hidden;
+    background-color:rgba(255,255,255,.8);
+}
+
+#register-dp .form-group {
+    margin-bottom: 10px;
+}
+
+#register-dp .btn{
+    background-color: #DB6562;
+    color: white;
+}
+
+
+/* Login form */
 
 #login-dp{
     min-width: 250px;
@@ -6,40 +25,50 @@
     overflow:hidden;
     background-color:rgba(255,255,255,.8);
 }
+
 #login-dp .help-block{
     font-size:12px
 }
+
 #login-dp .bottom{
     background-color:rgba(255,255,255,.8);
     border-top:1px solid #ddd;
     clear:both;
     padding:14px;
 }
+
 #login-dp .social-buttons{
     margin:12px 0
 }
+
 #login-dp .social-buttons a{
     width: 49%;
 }
+
 #login-dp .form-group {
     margin-bottom: 10px;
 }
+
 .btn-fb{
     color: #fff;
     background-color:#3b5998;
 }
+
 .btn-fb:hover{
     color: #fff;
     background-color:#496ebc
 }
+
 .btn-tw{
     color: #fff;
     background-color:#55acee;
 }
+
 .btn-tw:hover{
     color: #fff;
     background-color:#59b5fa;
 }
+
 @media(max-width:768px){
     #login-dp{
         background-color: inherit;
@@ -56,18 +85,19 @@
   color: white;
 }
 
-/*couleur de la navbar*/
+/* Navbar color */
 
 .navbar-inverse{
     background-color:#3D4957 !important;
 }
+
 .navbar-inverse .navbar-nav>.active>a,
 .navbar-inverse .navbar-nav>.active>a:hover,
 .navbar-inverse .navbar-nav>.active>a:focus {
   background-color: #3D4957;
 }
 
-.navbar-brand>img {
+.navbar-brand > img {
   height: 100%;
   padding: 0px;
   width: auto;
