--- a/frontend/public/navbar.css
+++ b/frontend/public/navbar.css
@@ -58,6 +58,10 @@
 /* Register form */
 
 #registerModal {
+    background-color:rgba(100,100,100,.5);
+}
+
+#registerModal .modal-content {
     min-width: 250px;
     padding: 14px 14px 0;
     overflow:hidden;
@@ -65,7 +69,7 @@
 }
 
 #registerModal .form-group {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 #registerModal .btn{
