--- a/frontend/public/style_index.css
+++ b/frontend/public/style_index.css
@@ -6,14 +6,14 @@
     margin-left: auto;
 }
 
-#section1 {
+#home {
     background-size: cover;
     height:850px;
     color: #fff;
     text-align: center;
 }
 
-#section2 {
+#about {
     padding: 70px;
     color: #3D4957;
     vertical-align: top;
@@ -21,7 +21,7 @@
     background-color: #F9FAFC;
 }
 
-#section3 {
+#contact {
     padding-top:50px;
     height:600px;
     color: #fff;
@@ -32,12 +32,12 @@
     footer {
         font-size: 100%;
     }
-    #section1 {
+    #home {
         background-image: url("../imgs/map_pin.jpg");
         padding: 100px;
     }
-    
-    #section1 .btn-default {
+
+    #home .btn-default {
         font-size: 30px;
         margin-top: 20px;
         border: none;
@@ -48,20 +48,20 @@
     footer {
         font-size: 75%;
     }
-    
-    #section1 {
+
+    #home {
         background-image: url("../imgs/map_pin_mobile.jpg");
         margin-top: 30px;
         padding: 10%;
     }
 }
 
-#section1 .btn-default {
+#home .btn-default {
     background-color: #DB6562;
     color: white;
 }
 
-#section1 .btn-default:hover {
+#home .btn-default:hover {
     background-color: #B2605B;
     color: white;
 }
