--- a/frontend/public/style_index.css
+++ b/frontend/public/style_index.css
@@ -1,71 +1,80 @@
 .body {
-    width: 100%;
-    height: 100%; /* For at least Firefox */
-    min-height: 100%;
-    margin-right: auto;
-    margin-left: auto;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 #home {
-    background-size: cover;
-    height:850px;
-    color: #fff;
-    text-align: center;
+  background-size: cover;
+  height:850px;
+  color: #fff;
+  text-align: center;
 }
 
 #about {
-    padding: 70px;
-    color: #3D4957;
-    vertical-align: top;
-    text-align: center;
-    background-color: #F9FAFC;
+  padding: 70px;
+  color: #3D4957;
+  vertical-align: top;
+  text-align: center;
+  background-color: #F9FAFC;
 }
 
 #contact {
-    padding-top:50px;
-    height:600px;
-    color: #fff;
-    background-color: #444;
+  padding-top:50px;
+  height:600px;
+  color: #fff;
+  background-color: #444;
 }
 
 @media screen and (min-width: 480px) {
-    footer {
-        font-size: 100%;
-    }
-    #home {
-        background-image: url("../imgs/map_pin.jpg");
-        padding: 100px;
-    }
+  footer {
+    font-size: 100%;
+  }
+  #home {
+    background-image: url("../imgs/map_pin.png");
+    padding: 100px;
+  }
 
-    #home .btn-default {
-        font-size: 30px;
-        margin-top: 20px;
-        border: none;
-    }
+  #home .container {
+    margin-top: 140px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 3px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+    padding: 50px;
+    font-family: Trebuchet MS, sans-serif;
+  }
+
+  #home .btn-default {
+    font-size: 30px;
+    margin-top: 20px;
+    border: none;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    footer {
-        font-size: 75%;
-    }
+  footer {
+    font-size: 75%;
+  }
 
-    #home {
-        background-image: url("../imgs/map_pin_mobile.jpg");
-        margin-top: 30px;
-        padding: 10%;
-    }
+  #home {
+    background-image: url("../imgs/map_pin_mobile.jpg");
+    margin-top: 30px;
+    padding: 10%;
+  }
 }
 
 #home .btn-default {
-    background-color: #DB6562;
-    color: white;
+  background-color: #DB6562;
+  color: white;
 }
 
 #home .btn-default:hover {
-    background-color: #B2605B;
-    color: white;
+  background-color: #B2605B;
+  color: white;
 }
 
 .button, .dropdown-menu {
-    margin:10px auto
+  margin:10px auto
 }
