--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -1,4 +1,8 @@
-.body {
+html, body {
+  overflow-x: hidden;
+}
+
+body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
@@ -11,7 +15,6 @@
   background-image: url("../imgs/map_pin.png");
   background-size: cover;
   height: auto;
-  width: auto;
   color: #fff;
   text-align: center;
 }
