--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -63,15 +63,11 @@ body {
   top: 75px;
 }
 
-.button {
-  margin: 10px auto;
-}
-
 
 /****** Responsiveness ******/
 
 /* Big screens */
-@media screen and (min-width: 480px) {
+@media only screen and (min-width: 480px) {
   footer {
     font-size: 100%;
   }
@@ -102,7 +98,7 @@ body {
 }
 
 /* Small screens */
-@media screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
   footer {
     font-size: 75%;
   }
@@ -111,7 +107,6 @@ body {
   #home {
     background-size: auto;
     margin-top: 30px;
-    padding: 10%;
   }
 
   #home h1 {
@@ -124,6 +119,7 @@ body {
 
   #home .container {
     margin-top: 50px;
+    margin-bottom: 30px;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 3px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
@@ -136,6 +132,8 @@ body {
   }
 
   #home .btn-default {
+    text-align: center;
     margin-top: 75px;
+    margin-bottom: 10px;
   }
 }
