added modal for mail confirmed or not

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -37,7 +37,7 @@ body {
 }
 
 #about h1 {
-  color: #fd971c;
+  color: #e27e03;
 }
 
 /*** Contact section ***/
@@ -49,7 +49,7 @@ body {
 }
 
 #contact h2 {
-  color: #fd971c;
+  color: #e27e03;
 }
 
 /** Contact section **/
