logo was too big in small screens

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -91,6 +91,15 @@ body {
   #home h2 {
     margin-top:40px;
   }
+
+  /* Others */
+  #logo_title {
+    width: 50px;
+  }
+
+  #text_title {
+    font-size: 125%
+  }
 }
 
 /* Small screens */
@@ -131,5 +140,14 @@ body {
     text-align: center;
     margin-top: 75px;
     margin-bottom: 10px;
+  }
+
+  /* Others */
+  #logo_title {
+    width: 25px;
+  }
+
+  #text_title {
+    font-size: 62,5%
   }
 }
