--- a/frontend/css/navbar.css
+++ b/frontend/css/navbar.css
@@ -65,8 +65,9 @@
 	background-color: #e27e03;
 }
 
-/* Navbar height */
+/****** Responsiveness ******/
 
+/* Big screens */
 @media screen and (min-width: 480px) {
   footer {
     font-size: 100%;
@@ -80,5 +81,30 @@
 
   .navbar-nav .navbar-btn {
     margin-top: 21px;
+  }
+
+  /* Others */
+  #logo_title {
+    width: 30px;
+  }
+
+  #text_title {
+    font-size: 125%
+  }
+}
+
+/* Small screens */
+@media only screen and (max-width: 480px) {
+  footer {
+    font-size: 75%;
+  }
+
+  /* Others */
+  #logo_title {
+    width: 25px;
+  }
+
+  #text_title {
+    font-size: 62,5%
   }
 }
