--- a/frontend/css/profile.css
+++ b/frontend/css/profile.css
@@ -1,5 +1,10 @@
 body {
-    padding-top: 70px;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 70px;
 }
 /**** FULL CALENDAR ****/
 
