added a freeze if javascript is disabled

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -58,6 +58,26 @@ body {
 
 /*** Others ***/
 
+.nojs-overlay {
+    height: 100%;
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.nojs-overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+    padding: 8px;
+    font-size: 50px;
+    color: #ffffff;
+    display: block;
+}
 
 
 /****** Responsiveness ******/
