--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -8,7 +8,7 @@ body {
 
 /*** Home section ***/
 #home {
-  background-image: url("../imgs/map_pin.png");
+  background-image: url("../imgs/package-desktop.jpg");
   background-size: cover;
   height: auto;
   color: #fff;
@@ -57,6 +57,28 @@ body {
 }
 
 /*** Others ***/
+
+/* Register form */
+
+#registerModal {
+  background-color: rgba(100,100,100,.5);
+}
+
+#registerModal .modal-content {
+  min-width: 250px;
+  padding: 14px 14px 0;
+  overflow: hidden;
+  background-color:rgba(255,255,255,.8);
+}
+
+#registerModal .form-group {
+  margin-bottom: 15px;
+}
+
+#registerModal .btn {
+  background-color: #e27e03;
+  color: white;
+}
 
 .nojs-overlay {
     height: 100%;
