--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -4,6 +4,7 @@ body {
   min-height: 100%;
   margin-right: auto;
   margin-left: auto;
+  font-family: 'Slabo 27px', serif;
 }
 
 /*** Home section ***/
@@ -45,7 +46,7 @@ body {
   padding-top:50px;
   height:auto;
   color: #fff;
-  background-color: #222222;
+  background-color: #888888;
 }
 
 #contact h2 {
@@ -117,7 +118,7 @@ body {
     border-radius: 3px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
     padding: 50px;
-    font-family: Trebuchet MS, sans-serif;
+    font-family: 'Slabo 27px', serif;
     margin-bottom: 140px;
   }
 
@@ -159,7 +160,7 @@ body {
     border-radius: 3px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
     padding: 10px;
-    font-family: Trebuchet MS, sans-serif;
+    font-family: 'Slabo 27px', serif;
   }
 
   #about h2 {
