--- a/frontend/css/navbar.css
+++ b/frontend/css/navbar.css
@@ -47,9 +47,12 @@
   background-color: #e27e03;
 }
 
-.navbar-brand,
-.navbar-nav .navbar-head {
+.navbar-brand {
   font-family: 'Oswald', sans-serif;
+}
+
+.navbar-nav .navbar-head {
+  font-family: 'Droid Serif', serif;
 }
 
 /*** Others ***/
