--- a/frontend/css/profile.css
+++ b/frontend/css/profile.css
@@ -5,7 +5,7 @@ body {
   margin-right: auto;
   margin-left: auto;
   padding: 70px;
-  font-family: 'Slabo 27px', serif;
+  font-family: 'Droid Serif', serif;
 }
 /**** FULL CALENDAR ****/
 
