--- a/frontend/css/profile.css
+++ b/frontend/css/profile.css
@@ -1,3 +1,10 @@
+html, body {
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   width: 100%;
   height: 100%; /* For at least Firefox */
@@ -6,4 +13,25 @@ body {
   margin-left: auto;
   padding: 70px;
   font-family: 'Droid Serif', serif;
+}
+
+.nojs-overlay {
+    height: 100%;
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.nojs-overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+    padding: 8px;
+    font-size: 50px;
+    color: #ffffff;
+    display: block;
 }
