--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -42,50 +42,52 @@ nav.navbar.navbar-default.navbar-fixed-top
           a.navbar-head(href='#about') À propos
         li
           a.navbar-head(href='#contact') Contact
-        li#profile.dropdown(style='display: none')
-          button.btn.navbar-btn.btn-circle.dropdown-toggle(type='button', data-toggle='dropdown') Mon compte
-          ul#profile-dp.dropdown-menu.dropdown-profile
-            a(href='/profile')   Mon profil
-            form.form(action='/logout', method='POST', accept-charset='UTF-8')
-              button(type='submit') Déconnexion
-        li#login.dropdown(style='display: none')
-          button.btn.navbar-btn.btn-circle.dropdown-toggle(type='button', data-toggle='dropdown') Connexion
-          // Login dropdown
-          ul#login-dp.dropdown-menu
-            li
-              .row
-                .col-md-12
-                  // Login alert window
-                  #login-alert.alert.alert-danger.text-center(style='display: none')
-                    a.close(data-hide='alert') ×
-                    span#text-login-alert
-                  form#login-form.form(action='', accept-charset='UTF-8')
-                    // Username
-                    .form-group
-                      label.sr-only(for='login_username') Adresse Email
-                      .input-group
-                        span.input-group-addon
-                          i.glyphicon.glyphicon-user
-                        input#login_username.form-control.input-md(type='email', placeholder='Adresse mail')
-                    // Password
-                    .form-group
-                      label.sr-only(for='login_password') Mot de passe
-                      .input-group
-                        span.input-group-addon
-                          i.glyphicon.glyphicon-lock
-                        input#login_password.form-control.input-md(type='password', placeholder='Mot de passe')
-                      .help-block.text-right
-                        a(href='') Mot de passe oublié ?
-                    .form-group
-                      button#login_btn.btn.btn-default.btn-block(type='button') Se connecter
-                    .checkbox
-                      label
-                        input(type='checkbox')
-                        |  Rester connecter
-                .bottom.text-center
-                  br
-                  a(href='', data-toggle='modal', data-target='#registerModal')
-                    b Rejoignez nous !
+        if logged == true
+          li#profile.dropdown
+            button.btn.navbar-btn.btn-circle.dropdown-toggle(type='button', data-toggle='dropdown') Mon compte
+            ul#profile-dp.dropdown-menu.dropdown-profile
+              a(href='/profile')   Mon profil
+              form.form(action='/logout', method='POST', accept-charset='UTF-8')
+                button(type='submit') Déconnexion
+        else
+          li#login.dropdown
+            button.btn.navbar-btn.btn-circle.dropdown-toggle(type='button', data-toggle='dropdown') Connexion
+            // Login dropdown
+            ul#login-dp.dropdown-menu
+              li
+                .row
+                  .col-md-12
+                    // Login alert window
+                    #login-alert.alert.alert-danger.text-center(style='display: none')
+                      a.close(data-hide='alert') ×
+                      span#text-login-alert
+                      form#login-form.form(action='', accept-charset='UTF-8')
+                      // Username
+                      .form-group
+                        label.sr-only(for='login_username') Adresse Email
+                        .input-group
+                          span.input-group-addon
+                            i.glyphicon.glyphicon-user
+                            input#login_username.form-control.input-md(type='email', placeholder='Adresse mail')
+                      // Password
+                      .form-group
+                        label.sr-only(for='login_password') Mot de passe
+                        .input-group
+                          span.input-group-addon
+                            i.glyphicon.glyphicon-lock
+                          input#login_password.form-control.input-md(type='password', placeholder='Mot de passe')
+                        .help-block.text-right
+                          a(href='') Mot de passe oublié ?
+                      .form-group
+                        button#login_btn.btn.btn-default.btn-block(type='button') Se connecter
+                      .checkbox
+                        label
+                          input(type='checkbox')
+                          |  Rester connecter
+                  .bottom.text-center
+                    br
+                    a(href='', data-toggle='modal', data-target='#registerModal')
+                      b Rejoignez nous !
 // Register modal
 #registerModal.modal.fade(role='dialog')
   .modal-dialog
