--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -4,9 +4,10 @@ head
   meta(name='description' content='La livraison d\'une commande via un site de e-commerce est souvent difficile (horaires incompatibles). Nous vous mettons en relation avec vos voisins qui peuvent réceptionner vos colis.')
   meta(charset='utf-8')
   meta(name='viewport', content='width=device-width, initial-scale=1')
-  meta(prefix="og: http://ogp.me/ns#", property="og:title", content="Relayers")
-  meta(prefix="og: http://ogp.me/ns#", property="og:image", content="./imgs/logo.png")
-  meta(prefix="og: http://ogp.me/ns#", property="og:url", content="https://relayers.fr")
+  meta(property="og:title", content="Relayers")
+  meta(property="og:description", content="La livraison d\'une commande via un site de e-commerce est souvent difficile (horaires incompatibles). Nous vous mettons en relation avec vos voisins qui peuvent réceptionner vos colis.")
+  meta(property="og:image", content="./imgs/logo.png")
+  meta(property="og:url", content="relayers.fr")
   link(rel='icon apple-touch-icon apple-touch-icon-precomposed', type='image/png', href='./imgs/logo.png')
   link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
