--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -5,8 +5,8 @@ head
   meta(charset='utf-8')
   meta(name='viewport', content='width=device-width, initial-scale=1')
   meta(property="og:title", content="Relayers")
-  meta(property="og:description", content="La livraison d\'une commande via un site de e-commerce est souvent difficile (horaires incompatibles). Nous vous mettons en relation avec vos voisins qui peuvent réceptionner vos colis.")
-  meta(property="og:image", content="./imgs/logo.png")
+  meta(property="og:image", content="https://relayers.fr/imgs/logo.png")
+  meta(property="og:description", content="La livraison d\'une commande via un site de e-commerce est souvent difficile (horaires incompatibles). Nous vous mettons en relation avec vos voisins qui peuvent receptionner vos colis.")
   meta(property="og:url", content="relayers.fr")
   link(rel='icon apple-touch-icon apple-touch-icon-precomposed', type='image/png', href='./imgs/logo.png')
   link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
