--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -5,10 +5,10 @@ head
   meta(charset='utf-8')
   meta(name='viewport', content='width=device-width, initial-scale=1')
   meta(property="og:title", content="Relayers")
-  meta(property="og:image", content="https://relayers.fr/imgs/logo.png")
+  meta(property="og:image", content="https://relayers.fr/imgs/logo_corner_reduced.png")
   meta(property="og:description", content="La livraison d\'une commande via un site de e-commerce est souvent difficile (horaires incompatibles). Nous vous mettons en relation avec vos voisins qui peuvent receptionner vos colis.")
   meta(property="og:url", content="relayers.fr")
-  link(rel='icon apple-touch-icon apple-touch-icon-precomposed', type='image/png', href='./imgs/logo.png')
+  link(rel='icon apple-touch-icon apple-touch-icon-precomposed', type='image/png', href='./imgs/logo_corner_reduced.png')
   link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
   link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oswald|Droid+Serif')
