--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -169,7 +169,7 @@ if mailConfirmed == true
           button.close(type='button', data-dismiss='modal')  ×
           h4.text-center
             span #{text-mail-confirmedModal}
-            span.glyphicon.class={glyphicon-mail-confirmedModal}
+            span.glyphicon.class={'glyphicon-mail-confirmedModal'}
         // Temporaire : à supprimer quand le service sera ouvert
         .modal-body
           .row
