--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -168,7 +168,7 @@ if mailConfirmed == true
         .modal-header
           button.close(type='button', data-dismiss='modal')  ×
           h4.text-center
-            span #{text-mail-confirmedModal}
+            span #{textmailconfirmedModal}
             span.glyphicon.class={glyphiconmailconfirmedModal}
         // Temporaire : à supprimer quand le service sera ouvert
         .modal-body
