--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -175,7 +175,7 @@ if mailConfirmed == true
           .row
             .col-md-12
               h5.text-center
-                span #{temporary-service-closed}
+                span #{temporaryserviceclosed}
 #home.container-fluid
   .container
     h1 Une journée à la maison ?
