--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -162,7 +162,7 @@ nav.navbar.navbar-default.navbar-fixed-top
                 button#register_btn.btn.btn-default.btn-block(type='button') S'inscrire
 // Mail confirmed modal
 if mailConfirmed == true
-  #mail-confirmedModal.modal.show(role='dialog')
+  #mail-confirmedModal.modal.show(role='dialog', style='background-color: rgba(0, 0, 0, .5);')
     .modal-dialog
       .modal-content
         .modal-header
