added a color attribute

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -169,7 +169,7 @@ if mailConfirmed == true
           button.close(type='button', data-dismiss='modal')  ×
           h4.text-center
             | #{textmailconfirmedModal} 
-            | span(class='glyphicon ' + glyphiconmailconfirmedModal, style= 'color: ' + {red: glyphiconmailconfirmedModal === 'glyphicon-remove'}
+            | span(class='glyphicon ' + glyphiconmailconfirmedModal, style= 'color: ' + colormailconfirmedModal)
         // Temporaire : à supprimer quand le service sera ouvert
         .modal-body
           .row
