--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -115,6 +115,14 @@ body {
     display: block;
 }
 
+.glyphicon-ok {
+  color: green;
+}
+
+.glyphicon-remove {
+  color: red;
+}
+
 
 /****** Responsiveness ******/
 
